--- a/Html Basics/Textformatting.html
+++ b/Html Basics/Textformatting.html
@@ -1,9 +1,9 @@
 Text Formatting
 mostly used are 
 1.<b>-bold text
-2.<strong>-important text
+2.<strong>-important text appears bold
 3.<i>-italic text
-4.<em>-emphasised text
+4.<em>-emphasised text appears italic
 5.<mark>-marked text
 6.<del>-deleted text
 7.<ins>-inserted text
